crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_retry_config_constant.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: config
---
strategy: constant
max_attempts: 10
base_delay: 5s
max_delay: 5s
jitter: 0
