crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_retry_config_exponential.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: config
---
strategy: exponential
max_attempts: 5
base_delay: 2s
max_delay: 2m
jitter: 0.5
