crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_retry_config_immediate.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: config
---
strategy: immediate
max_attempts: 3
base_delay: 100ms
max_delay: 10s
jitter: 0
