crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_state_ambiguous_resolved.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: st
---
state_version: shipper.state.v1
plan_id: plan-snapshot-test
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
created_at: "2025-01-15T12:00:00Z"
updated_at: "2025-01-15T12:00:00Z"
attempt_history: []
packages:
  demo@1.0.0:
    name: demo
    version: 1.0.0
    attempts: 2
    state:
      state: published
    last_updated_at: "2025-01-15T12:00:00Z"
